# lemmy-federation-bot

./: lemmy-fed-bot.py  pyproject.toml
